--- a/resources/templates/introduction.html
+++ b/resources/templates/introduction.html
@@ -28,11 +28,11 @@
 			</div>
 			<div class="cards-container">
 				<a href="#page1" class="card">
-					<img th:src="@{/images/4.jpg}" alt="Hometown" />
+					<img th:src="@{/images/D.jfif}" alt="Hometown" />
 					<h3>Hometown</h3>
 				</a>
 				<a href="#page2" class="card">
-					<img th:src="@{/images/12.jpg}" alt="Art" />
+					<img th:src="@{/images/C.jfif}" alt="Art" />
 					<h3>Art</h3>
 				</a>
 				<a href="#page3" class="card">
@@ -40,16 +40,16 @@
 					<h3>About Me</h3>
 				</a>
 				<a href="#page4" class="card">
-					<img th:src="@{/images/5.jpg}" alt="Education" />
+					<img th:src="@{/images/A.jfif}" alt="Education" />
 					<h3>Education</h3>
 				</a>
 				<a href="#page5" class="card">
-					<img th:src="@{/images/32.jpg}" alt="Contact" />
+					<img th:src="@{/images/C.jfif}" alt="Contact" />
 					<h3>Contact</h3>
 				</a>
 			</div>
 			<div class="cards-footer">
-				<img src="img/logo.png" alt="Logo" class="cards-logo" />
+				<img th:src="@{/images/logo.png}" alt="Logo" class="cards-logo" />
 			</div>
 		</section>
 
@@ -58,10 +58,10 @@
 			<h1>Hometown</h1>
 			<p>……</p>
 			<div class="info-card">
-				<img th:src="@{/images/gerru.jpg}" alt="Art Sample">
+				<img th:src="@{/images/cao.jfif}" alt="Art Sample">
 				<div class="info-card-content">
-					<h4>作品标题</h4>
-					<p>这里写一些描述文字，比如创作时间、用到的材料、灵感来源等。</p>
+					<h4>故郷</h4>
+					<p>広大な錫林郭勒草原は、のびやかに広がる草原と果てしない青空が心を解き放ち、原風景として深く刻まれています。</p>
 				</div>
 			</div>
 		</section>
@@ -70,9 +70,9 @@
 			<h1>Art</h1>
 			<p>……</p>
 			<div class="info-card">
-				<img th:src="@{/images/ART.png}" alt="Art Sample">
+				<img th:src="@{/images/111.jfif}" alt="Art Sample">
 				<div class="info-card-content">
-					<h4></h4>
+					<h4>高校時代から絵画に親しみ、油彩や水彩など多彩な技法を学び、ウェブデザインのスキルも磨いてきました</h4>
 					<p></p>
 				</div>
 			</div>
@@ -82,10 +82,10 @@
 			<h1>About Me</h1>
 			<p>……</p>
 			<div class="info-card">
-				<img th:src="@{/images/Me.png}" alt="Art Sample">
+				<img th:src="@{/images/222.jfif}" alt="Art Sample">
 				<div class="info-card-content">
-					<h4></h4>
-					<p></p>
+					<h4>個人情報</h4>
+					<p>私は常に新しい技術を学び続け、自身の能力を磨きながら、未知のスキルへの強い好奇心を持っています</p>
 				</div>
 			</div>
 		</section>
@@ -94,10 +94,10 @@
 			<h1>Education</h1>
 			<p>……</p>
 			<div class="info-card">
-				<img th:src="@{/images/1.jpg}" alt="Art Sample">
+				<img th:src="@{/images/B.jfif}" alt="Art Sample">
 				<div class="info-card-content">
-					<h4></h4>
-					<p></p>
+					<h4>専攻分野</h4>
+					<p>大学では美術を専攻し、彫刻や翻訳、壁画、平面デザイン、プロダクトデザインなども手掛けました</p>
 				</div>
 			</div>
 		</section>
@@ -106,10 +106,10 @@
 			<h1>Contact</h1>
 			<p>……</p>
 			<div class="info-card">
-				<img th:src="@{/images/1.jpg}" alt="Art Sample">
+				<img th:src="@{/images/C.jfif}" alt="Art Sample">
 				<div class="info-card-content">
-					<h4>作品标题</h4>
-					<p>这里写一些描述文字，比如创作时间、用到的材料、灵感来源等。</p>
+					<h4>ご要望がありましたらお気軽にお問い合わせください</h4>
+					<p></p>
 				</div>
 			</div>
 		</section>
